--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,31 @@ code {
     'Courier New',
     monospace;
 }
+
+.header-container {
+  display: flex;
+  height: 88px;
+  width: 99%;
+  border-bottom: 1px solid gray
+}
+
+.header-item {
+  width: 49%;
+  padding: 5px;
+  margin-top: 6px;
+}
+
+.nav {
+ padding: 10px;
+}
+
+.nav-link {
+  font-size: 1.2rem !important;
+  font-weight: 500 !important;
+}
+
+.logo-text {
+  color: blue;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
