list reserved rocket on profile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -130,3 +130,13 @@ button {
 a.active {
   text-decoration: underline;
 }
+
+.my-profile {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.my-profile-item {
+  width: 49%;
+  padding: 1rem;
+}
